# edge-ml-sdk

./: README.md  pyproject.toml  setup.py
favoriotml/: __init__.py  config.py  exception.py  inference.py  model_loader.py  preprocessor.py
